[gd_scene load_steps=3 format=3 uid="uid://dcs3a5fw54xb6"]

[ext_resource type="Script" path="res://game_map.gd" id="1_qqus8"]
[ext_resource type="Texture2D" uid="uid://b6rfyqj4bygcs" path="res://smallPlayerMarker.png" id="2_h5o2k"]

[node name="GameMap" type="CanvasLayer"]
layer = 10
script = ExtResource("1_qqus8")

[node name="MapContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapBackground" type="ColorRect" parent="MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
pivot_offset = Vector2(640, 360)
color = Color(0, 0, 0, 0.458824)

[node name="MapContent" type="TextureRect" parent="MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(640, 360)

[node name="PlayerMarker" type="TextureRect" parent="MapContainer"]
custom_minimum_size = Vector2(8, 8)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_h5o2k")
stretch_mode = 4
